--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,45 +69,6 @@ jobs:
         run: make rpc-check
 
   ########################
-  # check commits
-  ########################
-  check-commits:
-    name: check commits
-    runs-on: ubuntu-latest
-    steps:
-      - name: git checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - name: go cache
-        uses: actions/cache@v1
-        with:
-          path: /home/runner/work/go
-          key: lnd-${{ runner.os }}-go-${{ env.GO_VERSION }}-${{ github.job }}-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            lnd-${{ runner.os }}-go-${{ env.GO_VERSION }}-${{ github.job }}-${{ hashFiles('**/go.sum') }}
-            lnd-${{ runner.os }}-go-${{ env.GO_VERSION }}-${{ github.job }}-
-            lnd-${{ runner.os }}-go-${{ env.GO_VERSION }}-
-            lnd-${{ runner.os }}-go-
-
-      - name: setup go ${{ env.GO_VERSION }}
-        uses: actions/setup-go@v2
-        with:
-          go-version: '~${{ env.GO_VERSION }}'
-
-      - name: fetch and rebase on master
-        run: |
-          git remote add upstream https://github.com/lightningnetwork/lnd
-          git fetch upstream
-          export GIT_COMMITTER_EMAIL="lnd-ci@example.com"
-          export GIT_COMMITTER_NAME="LND CI"
-          git rebase upstream/master
-
-      - name: check commits
-        run: scripts/check-each-commit.sh upstream/master
-
-  ########################
   # lint code
   ########################
   lint:
@@ -171,46 +132,46 @@ jobs:
   ########################
   # mobile compilation
   ########################
-  mobile-compile:
-    name: mobile compilation
-    runs-on: ubuntu-latest
-    steps:
-      - name: git checkout
-        uses: actions/checkout@v2
-
-      - name: go cache
-        uses: actions/cache@v1
-        with:
-          path: /home/runner/work/go
-          key: lnd-${{ runner.os }}-go-${{ env.GO_VERSION }}-${{ github.job }}-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            lnd-${{ runner.os }}-go-${{ env.GO_VERSION }}-${{ github.job }}-${{ hashFiles('**/go.sum') }}
-            lnd-${{ runner.os }}-go-${{ env.GO_VERSION }}-${{ github.job }}-
-            lnd-${{ runner.os }}-go-${{ env.GO_VERSION }}-
-            lnd-${{ runner.os }}-go-
-
-      - name: setup go ${{ env.GO_VERSION }}
-        uses: actions/setup-go@v2
-        with:
-          go-version: '~${{ env.GO_VERSION }}'
-
-      - name: download cache
-        uses: actions/cache@v1
-        with:
-          path: /home/runner/work/download_cache
-          key: lnd-${{ runner.os }}-download-${{ hashFiles('**/install_travis_proto.sh') }}
-          restore-keys: |
-            lnd-${{ runner.os }}-download-${{ hashFiles('**/install_travis_proto.sh') }}
-            lnd-${{ runner.os }}-download-
-
-      - name: install protoc and protobuf libraries
-        run: ./scripts/install_travis_proto.sh
-
-      - name: build mobile RPC bindings
-        run: make mobile-rpc
-
-      - name: build mobile specific code
-        run: go build --tags="mobile" ./mobile
+#  mobile-compile:
+#    name: mobile compilation
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: git checkout
+#        uses: actions/checkout@v2
+#
+#      - name: go cache
+#        uses: actions/cache@v1
+#        with:
+#          path: /home/runner/work/go
+#          key: lnd-${{ runner.os }}-go-${{ env.GO_VERSION }}-${{ github.job }}-${{ hashFiles('**/go.sum') }}
+#          restore-keys: |
+#            lnd-${{ runner.os }}-go-${{ env.GO_VERSION }}-${{ github.job }}-${{ hashFiles('**/go.sum') }}
+#            lnd-${{ runner.os }}-go-${{ env.GO_VERSION }}-${{ github.job }}-
+#            lnd-${{ runner.os }}-go-${{ env.GO_VERSION }}-
+#            lnd-${{ runner.os }}-go-
+#
+#      - name: setup go ${{ env.GO_VERSION }}
+#        uses: actions/setup-go@v2
+#        with:
+#          go-version: '~${{ env.GO_VERSION }}'
+#
+#      - name: download cache
+#        uses: actions/cache@v1
+#        with:
+#          path: /home/runner/work/download_cache
+#          key: lnd-${{ runner.os }}-download-${{ hashFiles('**/install_travis_proto.sh') }}
+#          restore-keys: |
+#            lnd-${{ runner.os }}-download-${{ hashFiles('**/install_travis_proto.sh') }}
+#            lnd-${{ runner.os }}-download-
+#
+#      - name: install protoc and protobuf libraries
+#        run: ./scripts/install_travis_proto.sh
+#
+#      - name: build mobile RPC bindings
+#        run: make mobile-rpc
+#
+#      - name: build mobile specific code
+#        run: go build --tags="mobile" ./mobile
 
   ########################
   # sample configuration check
